# haskell-csv

./: .gitignore  .gitlab-ci.yml  Makefile  QuotesCSV.cabal  README.md  cabal.mk  csv.cabal  example.cabal  quotescsv.cabal  stack.mk  stack.yaml
app/: ExampleAttoparsec.hs  Main.hs
data/: quotes.csv
src/: CSV.hs  Lib.hs  QuotesCSV.hs
test/: Spec.hs
