cabal-version:        3.0

name:                 QuotesCSV
version:              0.7.0
synopsis:             read from csv
description:          Example project to read from a CSV file using Attoparsec.
homepage:             https://github.com/frankhjung/haskell-csv#readme
license:              GPL-3.0-only
license-file:         LICENSE
author:               Frank H Jung
maintainer:           frankhjung@linux.com
copyright:            Copyright © 2017-2023 Frank H Jung
category:             education
build-type:           Simple
extra-source-files:   README.md

source-repository     head
  type:               git
  location:           git@github.com:frankhjung/haskell-csv.git

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:    QuotesCSV
  build-depends:      attoparsec
                    , base >= 4 && < 5
                    , text
                    , time
  ghc-options:       -Wall

executable            main
  hs-source-dirs:     app
                    , src
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      attoparsec
                    , base
                    , fmt
                    , text
                    , time
  other-modules:      QuotesCSV
  ghc-options:       -Wall -threaded

test-suite            test
  hs-source-dirs:     test
                    , src
  main-is:            Spec.hs
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  build-depends:      attoparsec
                    , base
                    , hspec
                    , text
                    , time
  other-modules:      QuotesCSV
  ghc-options:       -Wall -threaded
