name:                 example
version:              0.4.0
synopsis:             read from csv
description:          Example project to read from a CSV file using Attoparsec.
homepage:             https://github.com/frankhjung/haskell-csv#readme
license:              GPL-3
license-file:         LICENSE
author:               Frank H Jung
maintainer:           frankhjung@linux.com
copyright:            Copyright © 2017-2021 Frank H Jung
category:             education
build-type:           Simple
cabal-version:        >=1.10
extra-source-files:   README.md

source-repository     head
  type:               git
  location:           git@github.com:frankhjung/haskell-csv.git

executable            example
  hs-source-dirs:     app
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:       -Wall -threaded
  build-depends:      base
                    , example
                    , text

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:    QuotesCSV
  ghc-options:       -Wall
  build-depends:      attoparsec
                    , base
                    , text
                    , time

test-suite            test
  hs-source-dirs:     test
  main-is:            Spec.hs
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  build-depends:      base
                    , example
                    , hspec
                    , text
                    , time
  ghc-options:       -Wall -threaded

